<?xml version="1.0"?>
<package>
  <name>tough_perception_bringup</name>

  <description>The tough_perception_bringup package</description>
  <version>1.0.0</version>
  <maintainer email="vvjagtap@wpi.edu">vvjagtap</maintainer>
  <license>BSD</license>


  <build_depend>tough_filters</build_depend>
  <build_depend>tough_perception_common</build_depend>
  <run_depend>tough_filters</run_depend>
  <run_depend>tough_perception_common</run_depend>
  <buildtool_depend>catkin</buildtool_depend>



</package>
